Fix bug 305794: Uncompressed ODF is saved in wrong directory

This fix does that the old code tried to do but failed: Check if the
given path is a directory. But it does so using QDir so it's actually
portable.

BUG: 305794
FIXED-IN: 2.5.1
REVIEW: 106200